NiflyDLL/NiflyWrapper.hpp

extern "C" NIFLY_API void setShapeSkinToBone(void* nifPtr, void* shapePtr, const char* boneName, const nifly::MatTransform & buf);
extern "C" NIFLY_API void setNodeFlags(void* node, int theFlags);
extern "C" NIFLY_API void setTransform(void* theShape, nifly::MatTransform* buf);
extern "C" NIFLY_API void skinShape(void* f, void* shapeRef);
extern "C" NIFLY_API void setShapeBoneWeights(void* theFile, void* theShape, const char* boneName, VertexWeightPair * weights, int weightsLen);
extern "C" NIFLY_API void setShapeBoneIDList(void* f, void* shapeRef, int* boneIDList, int listLen);
extern "C" NIFLY_API void setPartitions(void* nifref, void* shaperef, uint16_t * partData, int partDataLen, uint16_t * tris, int triLen);
extern "C" NIFLY_API void setSegments(void* nifref, void* shaperef, uint16_t * segData, int segDataLen, uint32_t * subsegData, int subsegDataLen, uint16_t * tris, int triLen, const char* filename, uint32_t * cutCounts, int cutCountsLen, float* cutData, int cutDataLen);
extern "C" NIFLY_API void setColorsForShape(void* nifref, void* shaperef, nifly::Color4* colors, int colorLen);
extern "C" NIFLY_API void setClothExtraData(void* nifref, void* shaperef, char* name, char* buf, int buflen);
extern "C" NIFLY_API void setShapeGlobalToSkin(void* nifref, void* shaperef, nifly::MatTransform* xformBuf);
extern "C" NIFLY_API void setShaderTextureSlot(void* nifref, void* shaperef, int slotIndex, const char* buf);
extern "C" NIFLY_API void setStringExtraData(void* nifref, void* shaperef, char* name, char* buf);
extern "C" NIFLY_API void setConnectPointsParent(void* nifref, int buflen, ConnectPointBuf* buf);
extern "C" NIFLY_API void setConnectPointsChild(void* nifref, int isSkinned, int buflen, const char* buf);
extern "C" NIFLY_API int setCollConvexVerts(void* nifref, int id, float* verts, int vertcount, float* normals, int normcount);
extern "C" NIFLY_API void setCollConvexTransformShapeChild(void* nifref, const uint32_t id, uint32_t child_id);
extern "C" NIFLY_API int setController(void* nifref, uint32_t id, uint32_t controller_id);
extern "C" NIFLY_API int setBoneLOD(void* nifref, int id, int buflen, BSBoneLODInfoBuf* buf);
extern "C" NIFLY_API void setIntegerExtraData(void* nifref, void* shaperef, char* name, uint32_t value);