io_scene_nifly/pyn/niflydll.py

nifly.setBoneLOD.argtypes = [c_void_p, c_int, c_int, c_void_p]
nifly.setBoneLOD.restype = c_int
nifly.setClothExtraData.argtypes = [c_void_p, c_void_p, c_char_p, c_char_p, c_int]
nifly.setClothExtraData.restype = None
nifly.setCollConvexTransformShapeChild.argtypes = [c_void_p, c_uint32, c_uint32]
nifly.setCollConvexTransformShapeChild.restype = None
nifly.setCollConvexVerts.argtypes = [c_void_p, c_int, c_void_p, c_int, c_void_p, c_int]
nifly.setCollConvexVerts.restype = c_int
nifly.setColorsForShape.argtypes = [c_void_p, c_void_p, c_void_p, c_int]
nifly.setColorsForShape.restype = None
nifly.setConnectPointsChild.argtypes = [c_void_p, c_int, c_int, c_char_p]
nifly.setConnectPointsChild.restype = None
nifly.setConnectPointsParent.argtypes = [c_void_p, c_int, POINTER(ConnectPointBuf)]
nifly.setConnectPointsParent.restype = None
nifly.setController.argtypes = [c_void_p, c_int, c_int]
nifly.setController.restype = c_int
nifly.setIntegerExtraData.argtypes = [c_void_p, c_void_p, c_char_p, c_uint32]
nifly.setIntegerExtraData.restype = None
nifly.setNodeFlags.argtypes = [c_void_p, c_int]
nifly.setNodeFlags.restype = None
nifly.setPartitions.argtypes = [c_void_p, c_void_p, c_void_p, c_int, c_void_p, c_int]
nifly.setPartitions.restype = None
nifly.setSegments.argtypes = [c_void_p, c_void_p, c_void_p, c_int, c_void_p, c_int, c_void_p, c_int, c_char_p]
nifly.setSegments.restype = None
nifly.setShaderTextureSlot.argtypes = [c_void_p, c_void_p, c_int, c_char_p]
nifly.setShapeBoneIDList.argtypes = [c_void_p, c_void_p, c_void_p, c_int]  
nifly.setShapeBoneWeights.argtypes = [c_void_p, c_void_p, c_char_p, POINTER(VERTEX_WEIGHT_PAIR), c_int]
nifly.setShapeBoneWeights.restype = None
nifly.setShapeGlobalToSkin.argtypes = [c_void_p, c_void_p, POINTER(TransformBuf)]
nifly.setShapeGlobalToSkin.restype = None
nifly.setShapeSkinToBone.argtypes = [c_void_p, c_void_p, c_char_p, POINTER(TransformBuf)]
nifly.setShapeSkinToBone.restype = None
nifly.setStringExtraData.argtypes = [c_void_p, c_void_p, c_char_p, c_char_p]
nifly.setStringExtraData.restype = None
nifly.setTransform.argtypes = [c_void_p, POINTER(TransformBuf)]
nifly.setTransform.restype = None
nifly.skinShape.argtypes = [c_void_p, c_void_p]
nifly.skinShape.restype = None

# Set up pynStructure globals
pynStructure.nifly = nifly
pynStructure.logger = logging.getLogger("pynifly")